--- a/src/scss/components/_all.scss
+++ b/src/scss/components/_all.scss
@@ -1,5 +1,5 @@
-@import './header';
-@import './button';
-@import './categories';
-@import './sort';
-@import './pizza-block';
+@forward "header";
+@forward "button";
+@forward "categories";
+@forward "sort";
+@forward "pizza-block";
