--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,4 +1,5 @@
-@import '../variables';
+@use "sass:color";
+@use "../variables" as *;
 
 .button {
   display: inline-block;
@@ -8,9 +9,11 @@
   min-width: 100px;
   text-align: center;
   cursor: pointer;
-  transition: background-color $duration ease-in-out, border-color $duration ease-in-out;
+  transition:
+    background-color $duration ease-in-out,
+    border-color $duration ease-in-out;
   border: 1px solid transparent;
-  @include noselect();
+  @include noselect;
 
   &,
   span {
@@ -25,11 +28,11 @@
   }
 
   &:hover {
-    background-color: darken($orange, 8%);
+    background-color: color.scale($orange, $lightness: -8%);
   }
 
   &:active {
-    background-color: darken($orange, 12%);
+    background-color: color.scale($orange, $lightness: -12%);
     transform: translateY(1px);
   }
 
@@ -49,7 +52,7 @@
 
     &:hover,
     &:active {
-      background-color: lighten($color: $black, $amount: 10);
+      background-color: color.scale($black, $lightness: 10%);
     }
   }
 
@@ -83,7 +86,7 @@
     }
 
     &:active {
-      background-color: darken($orange, 8%);
+      background-color: color.scale($orange, $lightness: -8%);
     }
   }
 
